Fixing Width of Boarder to Match Title's Size.
Width is too larger, it’s dipping off the background picture.

--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@ div {
 h1 {
 	border: 3px solid black;
 	border-radius: 5px;
+	border-width: inherit;
 }
 
 h2 {
